[package]
name = "pipebuf_mio"
version = "0.2.0"
edition = "2021"
authors = ["Jim Peters <jim@uazu.net>"]

description = "PipeBuf support for `mio` byte-streams"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/pipebuf_mio"
documentation = "https://docs.rs/pipebuf_mio"

keywords = ["stream","io","async","pipebuf"]
categories = [ "asynchronous", "network-programming" ]

[dependencies]
pipebuf = "0.3"
mio = { version = "0.8", features = ["net"] }
